--- a/qt_ui/MotorControl/motorcontrol.ui
+++ b/qt_ui/MotorControl/motorcontrol.ui
@@ -169,6 +169,9 @@
    <property name="text">
     <string>Halt</string>
    </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
