--- a/qt_ui/motorcontrol/stateplot.ui
+++ b/qt_ui/motorcontrol/stateplot.ui
@@ -10,6 +10,12 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>State Plot</string>
   </property>
@@ -17,15 +23,23 @@
    <iconset resource="resource.qrc">
     <normaloff>:/icon/stats_lines.ico</normaloff>:/icon/stats_lines.ico</iconset>
   </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>320</width>
-     <height>240</height>
+     <x>0</x>
+     <y>0</y>
+     <width>661</width>
+     <height>561</height>
     </rect>
    </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <property name="sizeConstraint">
+     <enum>QLayout::SetDefaultConstraint</enum>
+    </property>
+    <property name="spacing">
+     <number>6</number>
+    </property>
+   </layout>
   </widget>
  </widget>
  <resources>
